# astro-sph-tools

./: .gitignore  README.md  pyproject.toml
src/astro_sph_tools/: _ArrayReorder.py  _CoordinateAxes.py  _Interface.py  __about__.py  __init__.py
src/astro_sph_tools/_scripts/: ast.py  find_nearest_haloes.py
src/astro_sph_tools/data_structures/: _IonisationTable.py  _ParticleType.py  _SimulationData.py  __init__.py
src/astro_sph_tools/io/: _ParticleFilter.py  __init__.py
src/astro_sph_tools/io/EAGLE/: _CatalogueSUBFIND.py  _EAGLE.py  _LineOfSightEAGLE.py  _SnapshotEAGLE copy.py  _SnapshotEAGLE.py  __init__.py  _sim_type.py
src/astro_sph_tools/io/SUBFIND/: __init__.py
src/astro_sph_tools/io/SWIFT/: _CatalogueSOAP.py  _LineOfSightSWIFT.py  _SWIFT.py  _SnapshotSWIFT.py  __init__.py  _sim_type.py
src/astro_sph_tools/io/TNG/: _SnapshotTNG.py  _TNG.py  __init__.py  _sim_type.py
src/astro_sph_tools/io/data_structures/: _CatalogueBase.py  _FileTreeScraper.py  _LineOfSightBase.py  _SnapshotBase.py  __init__.py  _tree_structures.py
src/astro_sph_tools/io/errors/: __init__.py
src/astro_sph_tools/io/ionisation_tables/: _HM01.py  _SupportedIons.py  __init__.py
src/astro_sph_tools/tools/: _ArrayReorder.py  __init__.py  _periodic_box_manipulations.py
src/astro_sph_tools/tools/projections/: __init__.py  _kernels.pyx  _pixel_calculations.pyx  _projector.py
