[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astro-sph-tools"
dynamic = ["version"]
description = 'Set of Python tools for working with astrophysics SPH cosmological hydrodynamical simulation datasets.'
readme = "README.md"
requires-python = ">=3.12"
license = "LicenseRef-NotYetLicensed"
keywords = []
authors = [
  { name = "Christopher Rowe", email = "chris.rowe19@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "QuasarCode",
]

[project.urls]
Documentation = "https://github.com/QuasarX1/astro-sph-tools#readme"
Issues = "https://github.com/QuasarX1/astro-sph-tools/issues"
Source = "https://github.com/QuasarX1/astro-sph-tools"

[project.scripts]
ast = "astro_sph_tools._scripts.ast:main"

[tool.hatch.version]
path = "src/astro_sph_tools/__about__.py"

[tool.hatch.envs.default]
python = "3.12"
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/astro_sph_tools tests}"

[tool.coverage.run]
source_pkgs = ["astro_sph_tools", "tests"]
branch = true
parallel = true
omit = [
  "src/astro_sph_tools/__about__.py",
]

[tool.coverage.paths]
astro_sph_tools = ["src/astro_sph_tools", "*/astro-sph-tools/src/astro_sph_tools"]
tests = ["tests", "*/astro-sph-tools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
