[build-system]
requires = ["hatchling", "cython", "numpy", "hatch-cython"]
build-backend = "hatchling.build"

[project]
name = "astro-sph-tools"
dynamic = ["version"]
description = 'Set of Python tools for working with astrophysics SPH cosmological hydrodynamical simulation datasets.'
readme = "README.md"
requires-python = ">=3.12"
license = "LicenseRef-NotYetLicensed"
keywords = []
authors = [
  { name = "Christopher Rowe", email = "chris.rowe19@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "QuasarCode",
  "numpy",
  "matplotlib",
  "h5py",
  "unyt",
  "swiftsimio",
  "pyread_eagle",
  "atomic_weights",
  "Cython",
  "mendeleev",
]

[project.urls]
Documentation = "https://github.com/QuasarX1/astro-sph-tools#readme"
Issues = "https://github.com/QuasarX1/astro-sph-tools/issues"
Source = "https://github.com/QuasarX1/astro-sph-tools"

[project.scripts]
ast = "astro_sph_tools._scripts.ast:main"
ast-find-nearest-haloes = "astro_sph_tools._scripts.find_nearest_haloes:main"

[tool.hatch.version]
path = "src/astro_sph_tools/__about__.py"

[project.entry-points.hatch]
cython = "hatch_cython.hooks"

[tool.hatch.build.targets.wheel]
packages = ["src/astro_sph_tools"]

# See https://github.com/joshua-auchincloss/hatch-cython?tab=readme-ov-file

[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cython"]

[tool.hatch.build.targets.wheel.hooks.cython.options]
includes = []
include_numpy = false
include_pyarrow = false

compile_args = [
  "-v",
  # by platform
  { platforms = ["linux", "darwin"], arg = "-Wcpp" },
  # by platform & arch
  { platforms = "darwin", arch = "x86_64", arg = "-arch x86_64" },
  { platforms = ["darwin"], arch = "arm64", arg = "-arch arm64" },
  # with pep508 markers
  { platforms = ["darwin"], arch = "x86_64", arg = "-I/usr/local/opt/llvm/include", depends_path = true, marker = "python_version >= '3.12'"  },
]

directives = { boundscheck = false, nonecheck = false, language_level = 3, binding = true }

compile_kwargs = { }

#modules = [
#  "src/astro_sph_tools/tools/projections/_kernels.pyx",
#  "src/astro_sph_tools/tools/projections/_pixel_calculations.pyx",
#]
targets = [
  "src/astro_sph_tools/tools/projections/_kernels.pyx",
  "src/astro_sph_tools/tools/projections/_pixel_calculations.pyx",
]

#[tool.hatch.build.targets.wheel.hooks.cython.options.files]
#targets = [
#  "src/astro_sph_tools/tools/projections/_kernels.pyx",
#  "src/astro_sph_tools/tools/projections/_pixel_calculations.pyx",
#]

[tool.hatch.envs.default]
python = "3.12"
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/astro_sph_tools tests}"

[tool.coverage.run]
source_pkgs = ["astro_sph_tools", "tests"]
branch = true
parallel = true
omit = [
  "src/astro_sph_tools/__about__.py",
]

[tool.coverage.paths]
astro_sph_tools = ["src/astro_sph_tools", "*/astro-sph-tools/src/astro_sph_tools"]
tests = ["tests", "*/astro-sph-tools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
